Role.Assistant correctly aligned in left margin

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -426,6 +426,11 @@ figure.fullwidth figcaption {
     line-height: 1.5rem;
     color: var(--fg-dialogues);
 }
+.role-view {
+}
+.role-view-assistant-hack {
+  margin-top: -0.5rem;
+}
 
 .rollupable-1000ms {
     transition: max-height 1000ms;
